updating to include midterm link

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <span>PHOTOGRAPHY</span>
             <p class="separator">To an English person, it will seem like simplified English,told me what </p>
 
-          </div>-->
+          </div>
 
         </div>
 
@@ -233,11 +233,11 @@
     </div><!-- End Portfolio Section -->
 
     <!-- ======= Journal Section ======= -->
-    <div id="journal" class="text-left paddsection">
+    <div id="projects" class="text-left paddsection">
 
       <div class="container">
         <div class="section-title text-center">
-          <h2>journal</h2>
+          <h2>projects</h2>
         </div>
       </div>
 
@@ -252,8 +252,8 @@
 
                 <div class="journal-txt">
 
-                  <h4><a href="blog-single.html">SO LETS MAKE THE MOST IS BEAUTIFUL</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
+                  <h4><a href="blog-single.html">CPSC 349 Midterm Question #1</a></h4>
+                  <p class="separator">This is the link to the first question of the CPSC 349 Midterm. <a href="https://github.com/n-badillo/midterm_question1">Click here to read more.</a>
                   </p>
 
                 </div>
