--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 
       </div>
 
-    </div><!-- End Services Section -->
+    </div>-->
+    <!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <div id="portfolio" class="text-center paddsection">
