--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="col-lg-4 ">
             <div class="div-img-bg">
               <div class="about-img">
-                <img src="https://www.humanesociety.org/sites/default/files/styles/768x326/public/2018/08/kitten-440379.jpg?h=f6a7b1af&itok=vU0J0uZR" class="img-responsive" alt="me">
+                <img src="" class="img-responsive" alt="me">
               </div>
             </div>
           </div>
@@ -91,8 +91,8 @@
           <div class="col-lg-7">
             <div class="about-descr">
 
-              <p class="p-heading">i am a student.  i love learning. </p>
-              <p class="separator">i currently use python, html, css, javascript, c++, java.</p>
+              <p class="p-heading">CPSC 349 Midterm </p>
+              <p class="separator">Click here for Question 1</p>
 
             </div>
 
@@ -101,277 +101,7 @@
       </div>
     </div><!-- End About Section -->
 
-    <!-- ======= Services Section ======= -->
-    <div id="services">
-      <div class="container">
-
-        <div class="services-carousel owl-theme">
-
-          <div class="services-block">
-
-            <i class="ion-ios-browsers-outline"></i>
-            <span>UI/UX DESIGN</span>
-            <p class="separator">learning how to create creative and functional pages </p>
-
-          </div>
-
-          <!--<div class="services-block">
-
-            <i class="ion-ios-lightbulb-outline"></i>
-            <span>BRAND IDENTITY</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
-          </div> -->
-
-          <div class="services-block">
-
-            <i class="ion-ios-color-wand-outline"></i>
-            <span>WEB DESIGN</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
-          </div>
-
-          <div class="services-block">
-
-            <i class="ion-social-android-outline"></i>
-            <span>MOBILE APPS</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
-          </div>
-          <!--
-          <div class="services-block">
-
-            <i class="ion-ios-analytics-outline"></i>
-            <span>Analytics</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
-          </div>
-
-          <div class="services-block">
-
-            <i class="ion-ios-camera-outline"></i>
-            <span>PHOTOGRAPHY</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>-->
-    <!-- End Services Section -->
-
-    <!-- ======= Portfolio Section ======= -->
-    <div id="portfolio" class="text-center paddsection">
-
-      <div class="container">
-        <div class="section-title text-center">
-          <h2>My Portfolio</h2>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-
-            <div class="portfolio-list">
-
-              <ul class="nav list-unstyled" id="portfolio-flters">
-                <li class="filter filter-active" data-filter=".all">all</li>
-                <li class="filter" data-filter=".branding">branding</li>
-                <li class="filter" data-filter=".mockups">mockups</li>
-                <li class="filter" data-filter=".uikits">ui kits</li>
-                <li class="filter" data-filter=".webdesign">web design</li>
-                <li class="filter" data-filter=".photography">photography</li>
-              </ul>
-
-            </div>
-
-            <div class="portfolio-container">
-
-              <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
-                <a class="popup-img" href="assets/img/portfolio/1.jpg">
-                  <img src="assets/img/portfolio/1.jpg" alt="img">
-                </a>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits photography">
-                <a class="popup-img" href="assets/img/portfolio/2.jpg">
-                  <img src="assets/img/portfolio/2.jpg" alt="img">
-                </a>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding webdesig photographyn">
-                <a class="popup-img" href="assets/img/portfolio/3.jpg">
-                  <img src="assets/img/portfolio/3.jpg" alt="img">
-                </a>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups webdesign photography">
-                <a class="popup-img" href="assets/img/portfolio/4.jpg">
-                  <img src="assets/img/portfolio/4.jpg" alt="img">
-                </a>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
-                <a class="popup-img" href="assets/img/portfolio/5.jpg">
-                  <img src="assets/img/portfolio/5.jpg" alt="img">
-                </a>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
-                <a class="popup-img" href="assets/img/portfolio/6.jpg">
-                  <img src="assets/img/portfolio/6.jpg" alt="img">
-                </a>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div><!-- End Portfolio Section -->
-
-    <!-- ======= Journal Section ======= -->
-    <div id="projects" class="text-left paddsection">
-
-      <div class="container">
-        <div class="section-title text-center">
-          <h2>projects</h2>
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="journal-block">
-          <div class="row">
-
-            <div class="col-lg-4 col-md-6">
-              <div class="journal-info">
-
-                <a href="blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
-
-                <div class="journal-txt">
-
-                  <h4><a href="blog-single.html">CPSC 349 Midterm Question #1</a></h4>
-                  <p class="separator">This is the link to the first question of the CPSC 349 Midterm. <a href="https://github.com/n-badillo/midterm_question1">Click here to read more.</a>
-                  </p>
-
-                </div>
-
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="journal-info">
-
-                <a href="blog-single.html"><img src="assets/img/blog-post-2.jpg" class="img-responsive" alt="img"></a>
-
-                <div class="journal-txt">
-
-                  <h4><a href="#blog-single.html">WE'RE GONA MAKE DREAMS COMES</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
-                  </p>
-
-                </div>
-
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="journal-info">
-
-                <a href="blog-single.html"><img src="assets/img/blog-post-3.jpg" class="img-responsive" alt="img"></a>
-
-                <div class="journal-txt">
-
-                  <h4><a href="blog-single.html">NEW LIFE CIVILIZATIONS TO BOLDLY</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
-                  </p>
-
-                </div>
-
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-    </div><!-- End Journal Section -->
-
-    <!-- ======= Contact Section ======= -->
-    <div id="contact" class="paddsection">
-      <div class="container">
-        <div class="contact-block1">
-          <div class="row">
-
-            <div class="col-lg-6">
-              <div class="contact-contact">
-
-                <h2 class="mb-30">GET IN TOUCH</h2>
-
-                <ul class="contact-details">
-                  <li><span>23 Main, Street</span></li>
-                  <li><span>New York, United States</span></li>
-                  <li><span>+88 01912704287</span></li>
-                  <li><span>example@example.com</span></li>
-                </ul>
-
-              </div>
-            </div>
-
-            <div class="col-lg-6">
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                <div class="row">
-
-                  <div class="col-lg-6">
-                    <div class="form-group contact-block1">
-                      <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                      <div class="validate"></div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                      <div class="validate"></div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-12">
-                    <div class="form-group">
-                      <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                      <div class="validate"></div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-12">
-                    <div class="form-group">
-                      <textarea class="form-control" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                      <div class="validate"></div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-12 mb-3">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-                  </div>
-
-                  <div class="col-lg-12">
-                    <input type="submit" class="btn btn-defeault btn-send" value="Send message">
-                  </div>
-
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div><!-- End Contact Section -->
-
-  </main><!-- End #main -->
+    
 
   <!-- ======= Footer ======= -->
   <div id="footer" class="text-center">
