--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I'm <span class="typed"></span></h1>
-        <p class="typed-items" data-typed-person="Nancy Badillo">Student, Designer, Developer</p>
+        <h1>I am <span class="typed"></span></h1>
+        <p class="typed-items" data-typed-person="Nancy Badillo">a student, a designer, a developer, self-taught</p>
 
         <ul class="list-unstyled list-social">
           <li><a href="#"><i class="ion-social-facebook"></i></a></li>
