--- a/index.html
+++ b/index.html
@@ -271,12 +271,12 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <a href="blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+                <a href="https://github.com/n-badillo/cpsc411_midterm"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
-                  <h4><a href="#blog-single.html">Project Coming Soon</a></h4>
-                  <p class="separator">Project coming soon.
+                  <h4><a href="#blog-single.html">CPSC 411 Midterm</a></h4>
+                  <p class="separator">This is a link to the CPSC 411 Midterm questions. <a href="https://github.com/n-badillo/cpsc411_midterm">Click here to view.</a>
                   </p>
 
                 </div>
@@ -287,11 +287,11 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <a href="blog-single.html"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+                <a href="#"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
-                  <h4><a href="#blog-single.html">Project Coming Soon</a></h4>
+                  <h4><a href="#">Project Coming Soon</a></h4>
                   <p class="separator">Project coming soon.
                   </p>
 
