--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <a href="#"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+                <a href="https://github.com/n-badillo/Weathrly"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
-                  <h4><a href="#">Project Coming Soon</a></h4>
-                  <p class="separator">Project coming soon.
+                  <h4><a href="https://github.com/n-badillo/Weathrly">Weathrly</a></h4>
+                  <p class="separator">Weathrly was created to bring a simplistic iOS weather app to the Apple App Store.  It uses OpenWeatherMap's weather API to request the current weather of a user, as well as enabling the users to serch for specific cities, or locations (with longitude and latitude coordinates).  <a ref="https://github.com/n-badillo/Weathrly"> Click here to view the GitHub repository.</a>
                   </p>
 
                 </div>
