--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <a href="https://github.com/n-badillo/Weathrly"><img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+                <a href="https://github.com/n-badillo/Weathrly"><img src="assets/img/Artboard_2_1024x1024.png" class="img-responsive" alt="img"></a>
 
                 <div class="journal-txt">
 
